// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectEnvironments render active renders empty message 1`] = `
.glamor-4 {
  font-size: 14px;
  box-shadow: inset 0 -1px 0;
  margin: -20px 0 30px;
}

.glamor-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.glamor-0 {
  font-size: 20px;
  font-weight: bold;
  margin: 20px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.glamor-19 {
  background: #fff;
  border: 1px solid;
  margin-bottom: NaNpx;
  position: relative;
}

.glamor-13 {
  border-bottom: 1px solid;
  border-radius: 0 0;
  text-transform: uppercase;
  font-size: 13px;
  line-height: 1;
  padding: 15px 20px;
}

.glamor-9 {
  font-size: inherit;
  text-transform: inherit;
  margin: 0;
}

.glamor-7 {
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  margin-bottom: 20px;
  font-size: inherit;
  text-transform: inherit;
  margin: 0;
}

.glamor-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: NaNpx;
  font-size: 1.5em;
  font-weight: bold;
}

<ProjectEnvironments
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
  route={
    Object {
      "path": "environments/",
    }
  }
  routes={Array []}
>
  <div>
    <SettingsPageHeading
      tabs={
        <ul
          className="nav nav-tabs"
          style={
            Object {
              "borderBottom": "1px solid #ddd",
            }
          }
        >
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/hidden/"
          >
            Hidden
          </ListLink>
        </ul>
      }
      title="Manage Environments"
    >
      <Wrapper
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </ul>
        }
      >
        <div
          className="glamor-4 glamor-5"
        >
          <Flex
            align="center"
          >
            <Base
              align="center"
              className="glamor-2"
            >
              <div
                className="glamor-2"
                is={null}
              >
                <Title>
                  <div
                    className="glamor-0 glamor-1"
                  >
                    Manage Environments
                  </div>
                </Title>
              </div>
            </Base>
          </Flex>
          <div>
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/"
              >
                <li
                  className="active"
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Environments
                    </a>
                  </Link>
                </li>
              </ListLink>
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/hidden/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/hidden/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Hidden
                    </a>
                  </Link>
                </li>
              </ListLink>
            </ul>
          </div>
        </div>
      </Wrapper>
    </SettingsPageHeading>
    <Panel>
      <StyledPanel>
        <div
          className="glamor-19 glamor-20"
        >
          <PanelHeader>
            <StyledPanelHeader>
              <Component
                className="glamor-13 glamor-14"
              >
                <div
                  className="glamor-13 glamor-14"
                >
                  <StyledPanelHeading>
                    <Component
                      className="glamor-9 glamor-6"
                    >
                      <PanelHeading
                        className="glamor-9 glamor-6"
                      >
                        <div
                          className="glamor-6 glamor-7 glamor-8"
                        >
                          Active Environments
                        </div>
                      </PanelHeading>
                    </Component>
                  </StyledPanelHeading>
                </div>
              </Component>
            </StyledPanelHeader>
          </PanelHeader>
          <PanelBody
            direction="column"
            disablePadding={true}
            flex={false}
          >
            <div
              className=""
            >
              <EmptyMessage>
                <Wrapper>
                  <div
                    className="glamor-17 glamor-18"
                  >
                    <div
                      className="ref-message"
                    >
                      You don't have any environments yet.
                    </div>
                  </div>
                </Wrapper>
              </EmptyMessage>
            </div>
          </PanelBody>
        </div>
      </StyledPanel>
    </Panel>
  </div>
</ProjectEnvironments>
`;

exports[`ProjectEnvironments render active renders environment list 1`] = `
.glamor-4 {
  font-size: 14px;
  box-shadow: inset 0 -1px 0;
  margin: -20px 0 30px;
}

.glamor-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.glamor-0 {
  font-size: 20px;
  font-weight: bold;
  margin: 20px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.glamor-29 {
  background: #fff;
  border: 1px solid;
  margin-bottom: NaNpx;
  position: relative;
}

.glamor-13 {
  border-bottom: 1px solid;
  border-radius: 0 0;
  text-transform: uppercase;
  font-size: 13px;
  line-height: 1;
  padding: 15px 20px;
}

.glamor-9 {
  font-size: inherit;
  text-transform: inherit;
  margin: 0;
}

.glamor-7 {
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  margin-bottom: 20px;
  font-size: inherit;
  text-transform: inherit;
  margin: 0;
}

.glamor-19 {
  box-sizing: border-box;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid;
}

.glamor-19:last-child {
  border: 0;
}

<ProjectEnvironments
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
  route={
    Object {
      "path": "environments/",
    }
  }
  routes={Array []}
>
  <div>
    <SettingsPageHeading
      tabs={
        <ul
          className="nav nav-tabs"
          style={
            Object {
              "borderBottom": "1px solid #ddd",
            }
          }
        >
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/hidden/"
          >
            Hidden
          </ListLink>
        </ul>
      }
      title="Manage Environments"
    >
      <Wrapper
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </ul>
        }
      >
        <div
          className="glamor-4 glamor-5"
        >
          <Flex
            align="center"
          >
            <Base
              align="center"
              className="glamor-2"
            >
              <div
                className="glamor-2"
                is={null}
              >
                <Title>
                  <div
                    className="glamor-0 glamor-1"
                  >
                    Manage Environments
                  </div>
                </Title>
              </div>
            </Base>
          </Flex>
          <div>
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/"
              >
                <li
                  className="active"
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Environments
                    </a>
                  </Link>
                </li>
              </ListLink>
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/hidden/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/hidden/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Hidden
                    </a>
                  </Link>
                </li>
              </ListLink>
            </ul>
          </div>
        </div>
      </Wrapper>
    </SettingsPageHeading>
    <Panel>
      <StyledPanel>
        <div
          className="glamor-29 glamor-30"
        >
          <PanelHeader>
            <StyledPanelHeader>
              <Component
                className="glamor-13 glamor-14"
              >
                <div
                  className="glamor-13 glamor-14"
                >
                  <StyledPanelHeading>
                    <Component
                      className="glamor-9 glamor-6"
                    >
                      <PanelHeading
                        className="glamor-9 glamor-6"
                      >
                        <div
                          className="glamor-6 glamor-7 glamor-8"
                        >
                          Active Environments
                        </div>
                      </PanelHeading>
                    </Component>
                  </StyledPanelHeading>
                </div>
              </Component>
            </StyledPanelHeader>
          </PanelHeader>
          <PanelBody
            direction="column"
            disablePadding={true}
            flex={false}
          >
            <div
              className=""
            >
              <PanelItem
                align="center"
                justify="space-between"
                key="1"
                p={2}
              >
                <StyledPanelItem
                  align="center"
                  justify="space-between"
                  p={2}
                >
                  <Base
                    align="center"
                    className="glamor-19 glamor-20"
                    justify="space-between"
                    p={2}
                  >
                    <div
                      className="glamor-19 glamor-20"
                      is={null}
                    >
                      <span>
                        Production
                         
                        <code>
                          production
                        </code>
                      </span>
                      <Button
                        disabled={false}
                        onClick={[Function]}
                        size="xsmall"
                      >
                        <button
                          className="button button-default button-xs"
                          disabled={false}
                          onClick={[Function]}
                          role="button"
                        >
                          <Flex
                            align="center"
                            className="button-label"
                          >
                            <Base
                              align="center"
                              className="button-label glamor-2"
                            >
                              <div
                                className="button-label glamor-2"
                                is={null}
                              >
                                Hide
                              </div>
                            </Base>
                          </Flex>
                        </button>
                      </Button>
                    </div>
                  </Base>
                </StyledPanelItem>
              </PanelItem>
              <PanelItem
                align="center"
                justify="space-between"
                key="2"
                p={2}
              >
                <StyledPanelItem
                  align="center"
                  justify="space-between"
                  p={2}
                >
                  <Base
                    align="center"
                    className="glamor-19 glamor-20"
                    justify="space-between"
                    p={2}
                  >
                    <div
                      className="glamor-19 glamor-20"
                      is={null}
                    >
                      <span>
                        Staging
                         
                        <code>
                          staging
                        </code>
                      </span>
                      <Button
                        disabled={false}
                        onClick={[Function]}
                        size="xsmall"
                      >
                        <button
                          className="button button-default button-xs"
                          disabled={false}
                          onClick={[Function]}
                          role="button"
                        >
                          <Flex
                            align="center"
                            className="button-label"
                          >
                            <Base
                              align="center"
                              className="button-label glamor-2"
                            >
                              <div
                                className="button-label glamor-2"
                                is={null}
                              >
                                Hide
                              </div>
                            </Base>
                          </Flex>
                        </button>
                      </Button>
                    </div>
                  </Base>
                </StyledPanelItem>
              </PanelItem>
            </div>
          </PanelBody>
        </div>
      </StyledPanel>
    </Panel>
  </div>
</ProjectEnvironments>
`;

exports[`ProjectEnvironments render hidden renders empty message 1`] = `
.glamor-4 {
  font-size: 14px;
  box-shadow: inset 0 -1px 0;
  margin: -20px 0 30px;
}

.glamor-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.glamor-0 {
  font-size: 20px;
  font-weight: bold;
  margin: 20px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.glamor-19 {
  background: #fff;
  border: 1px solid;
  margin-bottom: NaNpx;
  position: relative;
}

.glamor-13 {
  border-bottom: 1px solid;
  border-radius: 0 0;
  text-transform: uppercase;
  font-size: 13px;
  line-height: 1;
  padding: 15px 20px;
}

.glamor-9 {
  font-size: inherit;
  text-transform: inherit;
  margin: 0;
}

.glamor-7 {
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  margin-bottom: 20px;
  font-size: inherit;
  text-transform: inherit;
  margin: 0;
}

.glamor-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: NaNpx;
  font-size: 1.5em;
  font-weight: bold;
}

<ProjectEnvironments
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
  route={
    Object {
      "path": "environments/hidden/",
    }
  }
  routes={Array []}
>
  <div>
    <SettingsPageHeading
      tabs={
        <ul
          className="nav nav-tabs"
          style={
            Object {
              "borderBottom": "1px solid #ddd",
            }
          }
        >
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/hidden/"
          >
            Hidden
          </ListLink>
        </ul>
      }
      title="Manage Environments"
    >
      <Wrapper
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </ul>
        }
      >
        <div
          className="glamor-4 glamor-5"
        >
          <Flex
            align="center"
          >
            <Base
              align="center"
              className="glamor-2"
            >
              <div
                className="glamor-2"
                is={null}
              >
                <Title>
                  <div
                    className="glamor-0 glamor-1"
                  >
                    Manage Environments
                  </div>
                </Title>
              </div>
            </Base>
          </Flex>
          <div>
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Environments
                    </a>
                  </Link>
                </li>
              </ListLink>
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/hidden/"
              >
                <li
                  className="active"
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/hidden/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Hidden
                    </a>
                  </Link>
                </li>
              </ListLink>
            </ul>
          </div>
        </div>
      </Wrapper>
    </SettingsPageHeading>
    <Panel>
      <StyledPanel>
        <div
          className="glamor-19 glamor-20"
        >
          <PanelHeader>
            <StyledPanelHeader>
              <Component
                className="glamor-13 glamor-14"
              >
                <div
                  className="glamor-13 glamor-14"
                >
                  <StyledPanelHeading>
                    <Component
                      className="glamor-9 glamor-6"
                    >
                      <PanelHeading
                        className="glamor-9 glamor-6"
                      >
                        <div
                          className="glamor-6 glamor-7 glamor-8"
                        >
                          Hidden
                        </div>
                      </PanelHeading>
                    </Component>
                  </StyledPanelHeading>
                </div>
              </Component>
            </StyledPanelHeader>
          </PanelHeader>
          <PanelBody
            direction="column"
            disablePadding={true}
            flex={false}
          >
            <div
              className=""
            >
              <EmptyMessage>
                <Wrapper>
                  <div
                    className="glamor-17 glamor-18"
                  >
                    <div
                      className="ref-message"
                    >
                      You don't have any hidden environments.
                    </div>
                  </div>
                </Wrapper>
              </EmptyMessage>
            </div>
          </PanelBody>
        </div>
      </StyledPanel>
    </Panel>
  </div>
</ProjectEnvironments>
`;

exports[`ProjectEnvironments render hidden renders environment list 1`] = `
.glamor-4 {
  font-size: 14px;
  box-shadow: inset 0 -1px 0;
  margin: -20px 0 30px;
}

.glamor-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.glamor-0 {
  font-size: 20px;
  font-weight: bold;
  margin: 20px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.glamor-23 {
  background: #fff;
  border: 1px solid;
  margin-bottom: NaNpx;
  position: relative;
}

.glamor-13 {
  border-bottom: 1px solid;
  border-radius: 0 0;
  text-transform: uppercase;
  font-size: 13px;
  line-height: 1;
  padding: 15px 20px;
}

.glamor-9 {
  font-size: inherit;
  text-transform: inherit;
  margin: 0;
}

.glamor-7 {
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  margin-bottom: 20px;
  font-size: inherit;
  text-transform: inherit;
  margin: 0;
}

.glamor-19 {
  box-sizing: border-box;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid;
}

.glamor-19:last-child {
  border: 0;
}

<ProjectEnvironments
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
  route={
    Object {
      "path": "environments/hidden/",
    }
  }
  routes={Array []}
>
  <div>
    <SettingsPageHeading
      tabs={
        <ul
          className="nav nav-tabs"
          style={
            Object {
              "borderBottom": "1px solid #ddd",
            }
          }
        >
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/hidden/"
          >
            Hidden
          </ListLink>
        </ul>
      }
      title="Manage Environments"
    >
      <Wrapper
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </ul>
        }
      >
        <div
          className="glamor-4 glamor-5"
        >
          <Flex
            align="center"
          >
            <Base
              align="center"
              className="glamor-2"
            >
              <div
                className="glamor-2"
                is={null}
              >
                <Title>
                  <div
                    className="glamor-0 glamor-1"
                  >
                    Manage Environments
                  </div>
                </Title>
              </div>
            </Base>
          </Flex>
          <div>
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Environments
                    </a>
                  </Link>
                </li>
              </ListLink>
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/hidden/"
              >
                <li
                  className="active"
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/hidden/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Hidden
                    </a>
                  </Link>
                </li>
              </ListLink>
            </ul>
          </div>
        </div>
      </Wrapper>
    </SettingsPageHeading>
    <Panel>
      <StyledPanel>
        <div
          className="glamor-23 glamor-24"
        >
          <PanelHeader>
            <StyledPanelHeader>
              <Component
                className="glamor-13 glamor-14"
              >
                <div
                  className="glamor-13 glamor-14"
                >
                  <StyledPanelHeading>
                    <Component
                      className="glamor-9 glamor-6"
                    >
                      <PanelHeading
                        className="glamor-9 glamor-6"
                      >
                        <div
                          className="glamor-6 glamor-7 glamor-8"
                        >
                          Hidden
                        </div>
                      </PanelHeading>
                    </Component>
                  </StyledPanelHeading>
                </div>
              </Component>
            </StyledPanelHeader>
          </PanelHeader>
          <PanelBody
            direction="column"
            disablePadding={true}
            flex={false}
          >
            <div
              className=""
            >
              <PanelItem
                align="center"
                justify="space-between"
                key="1"
                p={2}
              >
                <StyledPanelItem
                  align="center"
                  justify="space-between"
                  p={2}
                >
                  <Base
                    align="center"
                    className="glamor-19 glamor-20"
                    justify="space-between"
                    p={2}
                  >
                    <div
                      className="glamor-19 glamor-20"
                      is={null}
                    >
                      <span>
                        Zzz
                         
                        <code>
                          zzz
                        </code>
                      </span>
                      <Button
                        disabled={false}
                        onClick={[Function]}
                        size="xsmall"
                      >
                        <button
                          className="button button-default button-xs"
                          disabled={false}
                          onClick={[Function]}
                          role="button"
                        >
                          <Flex
                            align="center"
                            className="button-label"
                          >
                            <Base
                              align="center"
                              className="button-label glamor-2"
                            >
                              <div
                                className="button-label glamor-2"
                                is={null}
                              >
                                Show
                              </div>
                            </Base>
                          </Flex>
                        </button>
                      </Button>
                    </div>
                  </Base>
                </StyledPanelItem>
              </PanelItem>
            </div>
          </PanelBody>
        </div>
      </StyledPanel>
    </Panel>
  </div>
</ProjectEnvironments>
`;
